--- a/WebContent/pages/usuario/usuarioPesquisa.xhtml
+++ b/WebContent/pages/usuario/usuarioPesquisa.xhtml
@@ -26,38 +26,41 @@
 				filteredValue="#{usuariosBean.listaUsuariosFiltrados}" var="usuario"
 				rows="10" paginator="true">
 				<f:facet name="footer">
-					<p:button value="Novo"
-						outcome="/pages/usuario/usuarioCadastro.xhtml?faces-redirect=true" >
-						<f:param name="useracao" value="novo"/>
+					<p:button value="Novo" icon="ui-icon-plus"
+						outcome="/pages/usuario/usuarioCadastro.xhtml?faces-redirect=true">
+						<f:param name="useracao" value="novo" />
 					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{usuario.id}"
-					sortBy="#{usuario.id}" style="width: 9%;">
+					sortBy="#{usuario.id}"
+					filterStyle="max-width: 90%; min-width: 90%;" style="width: 9%;">
 					<h:outputText value="#{usuario.id}" />
 				</p:column>
 
-				<p:column headerText="Nome" filterBy="#{usuario.pfisica.pessoa.nome}">
+				<p:column headerText="Nome"
+					filterBy="#{usuario.pfisica.pessoa.nome}"
+					filterStyle="max-width: 90%; min-width: 90%;">
 					<h:outputText value="#{usuario.pfisica.pessoa.nome}" />
 				</p:column>
-				
+
 				<p:column headerText="Login" >
-					<h:outputText value="#{usuario.login}"/>
-				</p:column>
-				
-				<p:column headerText="Status" style="width: 4%;" >
-					<h:outputText value="#{usuario.status}"/>
+					<h:outputText value="#{usuario.login}" />
 				</p:column>
 
-				<p:column headerText="Opções" style="width: 12%;">
-					<p:button value="Editar"
+				<p:column headerText="Status" style="width: 4%;">
+					<h:outputText value="#{usuario.status}" />
+				</p:column>
+
+				<p:column headerText="Opções" style="width: 25%; text-align: center;">
+					<p:button value="Editar" icon="ui-icon-pencil"
 						outcome="/pages/usuario/usuarioCadastro.xhtml?faces-redirect=true">
 						<f:param name="userId" value="#{usuario.id}" />
-						<f:param name="useracao" value="editar"/>
+						<f:param name="useracao" value="editar" />
 					</p:button>
-					<p:button value="Excluir"
+					<p:button value="Excluir" icon="ui-icon-close"
 						outcome="/pages/usuario/usuarioCadastro.xhtml?faces-redirect=true">
 						<f:param name="userId" value="#{usuario.id}" />
-						<f:param name="useracao" value="excluir"/>
+						<f:param name="useracao" value="excluir" />
 					</p:button>
 				</p:column>
 
