--- a/WebContent/pages/item/itemPesquisa.xhtml
+++ b/WebContent/pages/item/itemPesquisa.xhtml
@@ -26,13 +26,14 @@
 				filteredValue="#{itemBean.listaItensFiltrados}" var="item" rows="7"
 				paginator="true">
 				<f:facet name="footer">
-					<p:button value="Novo"
+					<p:button value="Novo" icon="ui-icon-plus"
 						outcome="/pages/item/itemCadastro.xhtml?faces-redirect=true">
 						<f:param name="iteacao" value="novo" />
 					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{item.id}"
-					sortBy="#{item.id}" style="width: 9%;">
+					sortBy="#{item.id}" filterStyle="max-width: 90%; min-width: 90%;"
+					style="width: 12%; text-align: center;">
 					<h:outputText value="#{item.id}" />
 				</p:column>
 
@@ -42,18 +43,18 @@
 				</p:column>
 
 				<p:column headerText="Valor" style="width: 9%;">
-					<h:outputText value="#{item.valor}">
+					<h:outputText value="R$ #{item.valor}">
 						<f:convertNumber pattern="0.00" />
 					</h:outputText>
 				</p:column>
 				<!-- botões -->
-				<p:column headerText="Opções" style="width: 12%;">
-					<p:button value="Editar"
+				<p:column headerText="Opções" style="width: 25%; text-align: center;">
+					<p:button value="Editar" icon="ui-icon-pencil"
 						outcome="/pages/item/itemCadastro.xhtml?faces-redirect=true">
 						<f:param name="iteacao" value="editar" />
 						<f:param name="iteId" value="#{item.id}" />
 					</p:button>
-					<p:button value="Excluir"
+					<p:button value="Excluir" icon="ui-icon-close"
 						outcome="/pages/item/itemCadastro.xhtml?faces-redirect=true">
 						<f:param name="iteacao" value="excluir" />
 						<f:param name="iteId" value="#{item.id}" />
