--- a/WebContent/pages/pagamento/pagamentoPesquisa.xhtml
+++ b/WebContent/pages/pagamento/pagamentoPesquisa.xhtml
@@ -27,13 +27,15 @@
 				filteredValue="#{lancamentoBean.listaLancamentosFiltrados}"
 				var="lancamento" rows="10" paginator="true" widgetVar="atabela">
 				<f:facet name="footer">
-					<p:button value="Novo"
+					<p:button value="Novo" icon="ui-icon-plus"
 						outcome="/pages/pagamento/pagamentoCadastro.xhtml?faces-redirect=true">
 						<f:param name="lanacao" value="novo" />
 					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{lancamento.id}"
-					sortBy="#{lancamento.id}" style="width: 9%;">
+					sortBy="#{lancamento.id}"
+					filterStyle="max-width: 90%; min-width: 90%;"
+					style="width: 12%; text-align: center;">
 					<h:outputText value="#{lancamento.id}" />
 				</p:column>
 
@@ -46,7 +48,7 @@
 					filterBy="#{lancamento.dataLancamento}"
 					sortBy="#{lancamento.dataLancamento}"
 					filterFunction="#{lancamentoBean.dateToString}"
-					style="width: 12%; text-align: center;">
+					style="width: 17%; text-align: center;">
 					<h:outputText value="#{lancamento.dataLancamento}">
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt"
 							timeZone="GMT-3" />
@@ -57,7 +59,7 @@
 					filterBy="#{lancamento.dataVencimento}"
 					sortBy="#{lancamento.dataVencimento}"
 					filterFunction="#{lancamentoBean.dateToString}"
-					style="width: 12%; text-align: center;">
+					style="width: 17%; text-align: center;">
 
 					<h:outputText value="#{lancamento.dataVencimento}">
 						<f:convertDateTime pattern="dd/MM/yyyy" locale="pt"
@@ -66,8 +68,8 @@
 				</p:column>
 
 				<p:column headerText="Opções"
-					style="width: 12%; text-align: center;">
-					<p:button value="Emitir Recibo"
+					style="width: 15%; text-align: center;">
+					<p:button value="Emitir Recibo" icon="ui-icon-print"
 						outcome="/pages/pagamento/pagamentoCadastro.xhtml?faces-redirect=true">
 						<f:param name="lanId" value="#{lancamento.id}" />
 						<f:param name="lancao" value="emitirRecibo" />
