--- a/WebContent/pages/pessoaJuridica/pessoaJuridicaPesquisa.xhtml
+++ b/WebContent/pages/pessoaJuridica/pessoaJuridicaPesquisa.xhtml
@@ -33,7 +33,8 @@
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{pjuridica.id}"
 					filterStyle="max-width: 90%; min-width: 90%;"
-					sortBy="#{pjuridica.id}" style="width: 9%;">
+					style="width: 12%; text-align: center;"
+					sortBy="#{pjuridica.id}">
 					<h:outputText value="#{pjuridica.id}" />
 				</p:column>
 
