--- a/WebContent/pages/usuario/usuarioPesquisa.xhtml
+++ b/WebContent/pages/usuario/usuarioPesquisa.xhtml
@@ -33,7 +33,8 @@
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{usuario.id}"
 					sortBy="#{usuario.id}"
-					filterStyle="max-width: 90%; min-width: 90%;" style="width: 9%;">
+					filterStyle="max-width: 90%; min-width: 90%;"
+					style="width: 12%; text-align: center;">
 					<h:outputText value="#{usuario.id}" />
 				</p:column>
 
